# pynergy-client

./: .envrc  .gitignore  AGENTS.md  README.md  flake.nix  main.py  messages.pot  pyproject.toml  shell.nix
.github/workflows/: release-build.yml
docs/: README-zhCN.md  project_structure.md  struct_code.md
docs/backends/: backends_orgnize.md
docs/client/: client_orgnize.md
docs/protocol/: package_organize.md
scripts/: manage_i18n.py  release.py
src/: __main__.py  client.py  device.py  protocol.py  protocol_types.py  utils.py
src/client/: connection.py  handlers.py  states.py
src/keymaps/: synergy_map.py
src/protocol/: __init__.py  core.py  messages.py  models.py  parser.py  protocol_types.py  struct_types.py
src/pynergy_client/: __main__.py  app.py  config.py  utils.py
src/pynergy_client/client/: client.py  dispatcher.py  handlers.py  protocols.py
src/pynergy_client/device/: __init__.py  base.py  device.py  device_ctx_wayland.py  device_ctx_x11.py  vdev_uinput.py
src/pynergy_client/keymaps/: __init__.py
src/pynergy_client/pynergy_protocol/: __init__.py  core.py  messages.py  parser.py  protocol_types.py  struct_types.py
tests/: conftest.py  test_client.py  test_device.py  test_protocol.py  test_uinput_device.py
tests/protocol/: test_handshake.py
