[project]
name = "pynergy-client"
version = "0.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.9.2; sys_platform == 'linux'",
    "loguru>=0.7.3",
    "toml>=0.10.2",
    "click>=8.3.1",
    "pynput>=1.8.1",
    "python-xlib>=0.33",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.46",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "ruff>=0.14.14",
    "semver>=3.0.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project.scripts]
# 格式：可执行文件名 = "包名.模块名:函数名"
pynergy-client = "src.__main__:main"

[tool.uv]
package = false

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]
