[project]
name = "pynergy-client"
version = "0.1.2"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.1",
  "evdev>=1.9.2; sys_platform == 'linux'",
  "loguru>=0.7.3",
  "platformdirs>=4.5.0",
  "pynput>=1.8.1",
  "python-xlib>=0.33",
  "toml>=0.10.2",
]

[project.scripts]
pynergy-client = "src.pynergy_client.__main__:main"

[dependency-groups]
dev = [
  "gitpython>=3.1.46",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-dependency>=0.6.0",
  "pytest-sugar>=1.1.1",
  "questionary>=2.1.1",
  "ruff>=0.14.14",
  "semver>=3.0.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]

[tool.setuptools.packages]
find = {  }

[tool.uv]
package = false
