[project]
name = "pynergy"
version = "1.0.1"
description = "Pynergy monorepo workspace"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "gitpython>=3.1.46",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-sugar>=1.1.1",
    "pyinstaller>=6.19.0",
    "questionary>=2.1.1",
    "ruff>=0.14.14",
    "semver>=3.0.4",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]
